@@ -1,4 +1,5 @@
 v1.6
+	+ Quick link to edit lyrics through LyricWiki
 	+ Unicode lyrics and better searching with LyricWiki (orivej)
 	+ Store audioscrobbler password as md5 hash
 	+ Add Greek translation (Lazaros)
